--- a/templates/base-sheet.html
+++ b/templates/base-sheet.html
@@ -15,9 +15,9 @@
         <h1 class="sheet-title">{{document.name}}</h1>
         <div class="sheet-type">{{sheetTypeLabel}}</div>
         
-        <button class="image-change-btn" type="button">
+        {{#if isGM}}<button class="image-change-btn" type="button">
           <i class="fas fa-camera"></i>
-        </button>
+        </button>{{/if}}
         
         {{!-- Custom header content --}}
         {{{customHeaderContent}}}
