--- a/templates/editors/description-editor.html
+++ b/templates/editors/description-editor.html
@@ -7,7 +7,7 @@
     </div>
     <footer class="sheet-footer flexrow">
         <button type="submit" name="submit">
-            <i class="far fa-save"></i> Save Changes
+            <i class="far fa-save"></i> Save & Close
         </button>
     </footer>
 </form>
