--- a/templates/editors/description-editor.html
+++ b/templates/editors/description-editor.html
@@ -1,6 +1,6 @@
 <form class="editable flexcol" autocomplete="off">
-    <div class="editor prosemirror{{#if_system 'dnd5e'}} dnd5e{{/if_system}}">
-          <div name="description" data-engine="prosemirror" data-collaborate="true" class="cc-editor editor-content{{#if_system 'dnd5e'}} dnd5e2-journal{{/if_system}}">
+    <div class="editor prosemirror">
+          <div name="description" data-engine="prosemirror" data-collaborate="true" class="cc-editor editor-content{{#if_system 'dnd5e'}} dnd5e2-journal dnd5e dnd5e2 themed theme-light{{/if_system}}">
             {{{description}}}
 
         </div>
