--- a/styles/campaign-codex.css
+++ b/styles/campaign-codex.css
@@ -2642,16 +2642,28 @@
   }
 }
 
-.campaign-codex section.secret > button.reveal{
-    position: relative;
-    left: 50%;
-    top: -10px;
-    transform: translateX(-50%);
-    border-radius: 8px;
-    background: var(--cc-border);
-    border: none;
-        padding-left: 4px;
-            padding-right: 4px;
-    color: white;
+
+/*
+ * ---------------------------------------------
+ * Secret Block Button 
+ * ---------------------------------------------
+ */
+
+.campaign-codex section.secret > button.reveal {
+  border-radius: 8px;
+  background: var(--cc-border);
+  border: none;
+  color: white;
+  position: sticky;
+  left: 50%;
+  transform: translateY(-12px) translateX(-50%);
+  margin-top: auto;
+  width: auto;
+  height: auto;
+  padding: 0px 4px 0px 4px;
+}
+
+.campaign-codex section.secret l {
+    margin-top: 20px;
 }
 
