--- a/templates/base-sheet.html
+++ b/templates/base-sheet.html
@@ -32,12 +32,7 @@
     <div class="tab-item {{#if active}}active{{/if}}" data-tab="{{key}}">
       <i class="{{icon}}"></i>
       <span class="tab-label">{{label}}</span>
-<!--       {{#if ../isGM}}
-        {{#if statistic}}
-          <span class="tab-stat" style="color: {{statistic.color}};">({{statistic.value}})</span>
-        {{/if}}
-      {{/if}}
- -->    </div>
+   </div>
   {{/each}}
 </nav>
       {{!-- Tags --}}
